clasp 3.1.1:
  * LparseReader now handles "external statement"
  * fixed: low-level config interface failed to correctly handle successive changes of "opt-bound"
  * fixed: wrong completition nogoods with option "--no-gamma"
  * fixed regression in rule simplification (regression in 3.0.x)
  * fixed regression in "--configuration=jumpy"
  * fixed regression in handling of modifiers true/false in domain heuristic
  
clasp 3.1.0: Friday, 15th August 2014
  * added new strategies for unsatisfiable-core based optimization
  * added alternative distribution mode via thread-local queues (option " --dist-mode")
  * generators now propagate top-level assignment to testers
  * removed optimization options from default configurations
  * CLI changes:
    - option "--sat-prepro" now expects the algorithm followed by an optional list of limits
    - option "--opt-strategy" now takes two arguments; the first mandatory argument selects the 
      major strategy (i.e. branch and bound or unsat-core), while the optional second argument
      controls fine tuning of said strategy
    - combined options "--dom-mod" and "--dom-pref" and added enum mode "domRec" for 
      enabling subset optimization via domain heuristic
    - added "--forget-on-step=2" for discarding previously set variable phases and changed
      value for discarding nogood activities and learnt nogoods to 4 and 8, respectively
    - replaced option "--hparam" (and its aliases) with second argument for "--heuristic"
    - replaced "--berk-once" with more general "--score-res"
    - renamed option "--number" to "--models"
  * Integration/clingo:
    - added support for open (i.e. unassigned) externals
	- added support for adding constraints via model callback
	- added low-level interface for accessing a clasp configuration
	- cleaned up some stats keys and replaced "camelCase" with "snake_case" in keys

clasp 3.0.6: Monday, 21st July 2014